Details
-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.6.0 Beta3
-
None
-
7a9b13d1f (dev), 1cc1a7e9f (6.6)
Description
Highlightseries is rendered incorrectly if zooming in or going into slice view in widgetgraphgallery example's Surface Graph > Textured Topography
Attachments
For Gerrit Dashboard: QTBUG-116479 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
500956,1 | Fix picking after changing range | dev | qt/qtgraphs | Status: ABANDONED | -1 | 0 |
501847,4 | Fix topography selection zoom issue | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |
502105,2 | Fix topography selection zoom issue | 6.6 | qt/qtgraphs | Status: MERGED | +2 | 0 |