Fix topography selection zoom issue

Fixes: QTBUG-116479
Change-Id: I95237fcd769dac3276e770225e0a9e94073e6249
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit 7a9b13d1fb52f4df05e5e7ec6eb1fcd10bd3b25d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>